DuPont DevSB/src/objects/ccrz__E_PageLabel__c.object
<CustomObject>
    <description>Holds the configuration information for field labels, help text, or error messages on a specific page with specific storefront and language.</description>
    <fields>
        <fullName>ccrz__PageLabelId__c</fullName>
        <description>External Id for data loading</description>
        <externalId>true</externalId>
        <label>PageLabelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PageName__c</fullName>
        <description>Page name. A page named &quot;All&quot; applies to all pages. The CloudCraze first returns records with matched language, storefront, and pageName. If no match found, return records with page named &quot;All&quot; and matched store and store.</description>
        <externalId>true</externalId>
        <label>Page Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <formula>IF(AND(ccrz__Storefront__c = &apos;Global&apos;,ccrz__PageName__c = &apos;All&apos;), 1,
IF(AND(ccrz__Storefront__c = &apos;Global&apos;,ccrz__PageName__c != &apos;All&apos;), 2,
IF(AND(ccrz__Storefront__c != &apos;Global&apos;,ccrz__PageName__c = &apos;All&apos;),3,4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Storefront name. A storefront named &quot;Global&quot; applies to all store fronts. The CloudCraze first returns records with matched storefront name, language, and pageName. If no match found, return records with storefront named &quot;Global&quot; and matched language and pageName.</description>
        <externalId>true</externalId>
        <label>Storefront</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ValueRT__c</fullName>
        <label>ValueRT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Value__c</fullName>
        <description>The value of a page label with specific store, language, and page.</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Page Label</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>NAME</columns>
        <columns>ccrz__Value__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageLabelId__c</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__CheckOut</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__PageLabelId__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__PageName__c</field>
            <operation>equals</operation>
            <value>CheckOut</value>
        </filters>
        <label>CheckOut</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__DefaultStore</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>equals</operation>
            <value>DefaultStore</value>
        </filters>
        <label>DefaultStore</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__Global</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filters>
        <label>Global</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__OrderSummary</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>OrderSummary</value>
        </filters>
        <label>OrderSummary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__Wireframe</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>equals</operation>
            <value>Wireframe</value>
        </filters>
        <label>Wireframe</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Page Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Page Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>